Adapt to JDK24