@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <!--
-  Copyright (C) 2021, 2024, Yasumasa Suenaga
+  Copyright (C) 2021, 2025, Yasumasa Suenaga
 
   This program is free software; you can redistribute it and/or
   modify it under the terms of the GNU General Public License
@@ -34,8 +34,8 @@
         <imageName>${project.artifactId}-${project.version}</imageName>
         <buildYear>${maven.build.timestamp}</buildYear>
         <maven.build.timestamp.format>yyyy</maven.build.timestamp.format>
-        <maven.compiler.source>23</maven.compiler.source>
-        <maven.compiler.target>23</maven.compiler.target>
+        <maven.compiler.source>24</maven.compiler.source>
+        <maven.compiler.target>24</maven.compiler.target>
     </properties>
 
     <dependencies>
@@ -57,7 +57,6 @@
                     <compilerArgs>
                         <arg>-Xlint:all</arg>
                     </compilerArgs>
-                    <enablePreview>true</enablePreview>
                 </configuration>
             </plugin>
             <plugin>
@@ -65,7 +64,6 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.3</version>
                 <configuration>
-                  <argLine>--enable-preview</argLine>
                   <workingDirectory>${project.build.directory}</workingDirectory>
                 </configuration>
             </plugin>
@@ -91,9 +89,6 @@
                     <addModules>
                         <addModule>cfa</addModule>
                     </addModules>
-                    <addOptions>
-                        <addOption>--enable-preview</addOption>
-                    </addOptions>
                     <launcher>${project.artifactId}=cfa/com.yasuenag.cfa.Main</launcher>
                     <noHeaderFiles>true</noHeaderFiles>
                     <noManPages>true</noManPages>
